syntax = "proto3";
package mobiuspace.adx.log.detail.base  ;

enum AdxEventType {
  UNKNOWN = 0 ; //占位符，0作为默认值，无法反序列化，所以使用一个占位符，没有实际意义
  ADX_SUPPLY_REQUEST_EVENT = 1 ;
  ADX_DEMAND_REQUEST_EVENT = 2 ;
  ADX_DEMAND_WIN_EVENT = 3 ;
  ADX_DEMAND_RESPONSE_EVENT = 4 ;
  ADX_CREATIVE_IMPRESSION_EVENT = 5 ;
  ADX_CREATIVE_CLICK_EVENT = 6 ;
}