syntax = "proto3";
package mobiuspace.adx.log.detail.common ;

import "base/adx_app_context.proto";
import "base/adx_device_context.proto";
import "base/adx_user_context.proto";
import "base/adx_extra_context.proto";
import "base/adx_event_type.proto";
import "base/adx_supply_context.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message AdxRequestMessageLog {
  string globalId = 1 ;
  string bidId = 2 ;
  google.protobuf.Timestamp timestamp = 3 ;
  base.AdxEventType event = 4 ;
  base.AdxDeviceContext deviceContext = 5 ;
  base.AdxUserContext userContext = 6 ;
  base.AdxExtraContext extraContext = 7 ;
  base.AdxAppContext appContext = 8 ;
  base.AdxSupplyContext supplyContext = 9 ;
  google.protobuf.Any content = 10 ;
}